--- a/jquerrycalc/index.html
+++ b/jquerrycalc/index.html
@@ -10,31 +10,31 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="background">
+    <div id="background">
         <div class="result" id="result"></div>
         <div>
-            <input type="button" value="7" id="seven" class="num">
-            <input type="button" value="8" id="acht" class="num">
-            <input type="button" value="9" id="negen" class="num">
-            <input type="button" value="-" id="min" class="operator">
+            <input type="button" value="7" id="seven" class="num button">
+            <input type="button" value="8" id="acht" class="num button">
+            <input type="button" value="9" id="negen" class="num button">
+            <input type="button" value="-" id="min" class="operator button">
         </div>  
         <div>  
-            <input type="button" value="4" id="vier" class="num">
-            <input type="button" value="5" id="vijf" class="num">
-            <input type="button" value="6" id="zes" class="num">
-            <input type="button" value="+" id="plus" class="operator">
+            <input type="button" value="4" id="vier" class="num button ">
+            <input type="button" value="5" id="vijf" class="num button">
+            <input type="button" value="6" id="zes" class="num button">
+            <input type="button" value="+" id="plus" class="operator button">
         </div> 
         <div>  
-            <input type="button" value="1" id="een" class="num">
-            <input type="button" value="2" id="twee" class="num">
-            <input type="button" value="3" id="drie" class="num">
-            <input type="button" value="*" id="maal" class="operator">
+            <input type="button" value="1" id="een" class="num button">
+            <input type="button" value="2" id="twee" class="num button">
+            <input type="button" value="3" id="drie" class="num button">
+            <input type="button" value="*" id="maal" class="operator button">
         </div> 
         <div> 
-            <input type="button" value="c" id="clear" class="delete">
-            <input type="button" value="0" id="nul" class="num">
-            <input type="button" value="=" id="solve" class="equal">
-            <input type="button" value="/" id="delen" class="operator">
+            <input type="button" value="C" id="clear" class="delete button">
+            <input type="button" value="0" id="nul" class="num button">
+            <input type="button" value="=" id="solve" class="equal button">
+            <input type="button" value="/" id="delen" class="operator button">
         </div>
     </div>
 </body>
