angular done now too

--- a/angularjscalc/index.html
+++ b/angularjscalc/index.html
@@ -1,32 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./styles.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular.min.js"></script>
-    <script src="./index.js"></script>
-    <title>Document</title>
-</head>
-<body>
-        <form class="calc" ng-controller="MyCtrl">
-                <p class="calc-display">
-                  <input type="text" name="output" id="res" value="{{output}}" class="calc-display-input">
-                </p>
-                <p class="operators">
-                  <button type="button" class="calc-button calc-button-red calc-button-big" ng-click='operate("/")' >÷</button>
-                  <button type="button" class="calc-button calc-button-red calc-button-big" ng-click='operate("*")' >x</button>
-                  <button type="button" class="calc-button calc-button-red calc-button-big" ng-click='operate("-")' >-</button>
-                  <button type="button" class="calc-button calc-button-red calc-button-big" ng-click='operate("+")' >+</button>
-                </p>
-                <p class="calc-row">
-                  <button type="button" class="calc-button" ng-click="updateOutput($index)" ng-repeat="n in [0,1,2,3,4,5,6,7,8,9]">{{n}}</button>
-                  <button type="button" class="calc-button" ng-click="updateOutput('.')">.</button>
-                  <button type="button" class="calc-button" ng-click='output = 0'>C</button>
-                  
-                </p>
-                <p class="calc-row"><button type="button" class="calc-button calc-button-yellow calc-button-big" ng-click="equal()">=</button></p>
-              </form>
-</body>
+<html ng-app="plunker">
+
+  <head>
+    <meta charset="utf-8" />
+    <title>AngularJS Plunker</title>
+    <script>document.write('<base href="' + document.location + '" />');</script>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <script data-require="angular.js@1.5.x" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.11/angular.min.js" data-semver="1.5.11"></script>
+    <script src="./js/index.js"></script>
+  </head>
+
+  <body ng-controller="MainCtrl">
+    <div class="wrapper">
+    
+    <p class="calc-display">
+      <input type="text" name="output" id="res" value="{{output}}" class="output">
+    </p>
+    <div class="row">
+        <input type="button" value="7" name="num" ng-click='updateOutput("7")'>
+        <input type="button" value="8" name="num" ng-click='updateOutput("8")'>
+        <input type="button" value="9" name="num" ng-click='updateOutput("9")'>
+        <input type="button" value="-" name="operator" ng-click='operate("-")'>
+      </div>
+      <div class="row">
+        <input type="button" value="4" name="num" ng-click='updateOutput("4")'>
+        <input type="button" value="5" name="num"ng-click='updateOutput("5")'>
+        <input type="button" value="6" name="num" ng-click='updateOutput("6")'> 
+        <input type="button" value="+" name="operator" ng-click='operate("+")'>
+      </div>
+      <div class="row">
+        <input type="button" value="1" name="num" ng-click='updateOutput("1")'>
+        <input type="button" value="2" name="num" ng-click='updateOutput("2")'>
+        <input type="button" value="3" name="num" ng-click='updateOutput("3")'>
+        <input type="button" value="*" name="operator" ng-click='operate("*")'>
+      </div>
+      <div class="row">
+        <input type="button" value="0" name="num" ng-click='updateOutput("0")'>
+        <input type="button" value="C" name="clear" ng-click='output = 0'>
+        <input type="button" value="=" name="equal" ng-click="equal()">
+        <input type="button" value="/" name="operator" ng-click='operate("/")'>
+      </div>
+    </div>
+    <ul>
+        <li>htmlapp: <br>
+            <a href="http://localhost:3000">localhost:3000</a></li>
+        <li>jquerry: <br>
+            <a href="http://localhost:3001">localhost:3001</a></li>
+        <li>angular:<br>
+            <a href="http://localhost:3002">localhost:3002</a></li>
+    </ul> 
+  </body>
+
 </html>
