--- a/jquerrycalc/index.html
+++ b/jquerrycalc/index.html
@@ -37,5 +37,13 @@
             <input type="button" value="/" id="delen" class="operator button">
         </div>
     </div>
+    <ul>
+            <li>htmlapp: <br>
+                <a href="http://localhost:3000">localhost:3000</a></li>
+            <li>jquerry: <br>
+                <a href="http://localhost:3001">localhost:3001</a></li>
+            <li>angular:<br>
+                <a href="http://localhost:3002">localhost:3002</a></li>
+        </ul> 
 </body>
 </html>
