fixed file structure and removed link to angular cdn

--- a/angularjscalc/index.html
+++ b/angularjscalc/index.html
@@ -6,8 +6,6 @@
     <title>AngularJS Plunker</title>
     <script>document.write('<base href="' + document.location + '" />');</script>
     <link rel="stylesheet" href="./css/styles.css" />
-    <script data-require="angular.js@1.5.x" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.11/angular.min.js" data-semver="1.5.11"></script>
-    <script src="./js/index.js"></script>
   </head>
 
   <body ng-controller="MainCtrl">
@@ -48,7 +46,9 @@
             <a href="http://localhost:3001">localhost:3001</a></li>
         <li>angular:<br>
             <a href="http://localhost:3002">localhost:3002</a></li>
-    </ul> 
-  </body>
+    </ul>
 
+  </body>
+<script src="./lib/angular1.6.6.js"></script>
+<script src="./js/index.js"></script>
 </html>
