--- a/htmlcalc/index.html
+++ b/htmlcalc/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
     <title>HTML Calculator</title>
-    <link rel="stylesheet" type="text/css" href='./styles.css'> <!-- het wilde niet lukken om de styles.css uit de shared folder te krijgen dus workaround-->
+    <link rel="stylesheet" type="text/css" href='./css/styles.css'> <!-- het wilde niet lukken om de styles.css uit de shared folder te krijgen dus workaround-->
     </head>
     <body>
         <div id="background">
