--- a/jquerycalc/index.html
+++ b/jquerycalc/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="./jquery-3.2.1.min.js"></script>
-    <script src="./index.js"></script>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Document</title>
 </head>
 <body>
@@ -45,5 +43,7 @@
             <li>angular:<br>
                 <a href="http://localhost:3002">localhost:3002</a></li>
         </ul> 
+    <script src="./lib/jquery-3.2.1.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
