--- a/htmlcalc/index.html
+++ b/htmlcalc/index.html
@@ -5,36 +5,26 @@
     <link rel="stylesheet" type="text/css" href='./css/styles.css'> <!-- het wilde niet lukken om de styles.css uit de shared folder te krijgen dus workaround-->
     </head>
     <body>
-        <div id="background">
-            <form name="calculator" >
-                <input type="textfield" name="result" value="" id="result">
-                <div>
-                <!-- <make a button asign="value" event="page.select form with name.add the value to the textfield result"> -->
-                    <input type="button" value="1" onClick="document.calculator.result.value+='1'" class="num">
-                    <input type="button" value="2" onClick="document.calculator.result.value+='2'" class="num">
-                    <input type="button" value="3" onClick="document.calculator.result.value+='3'" class="num">
-                    <input type="button" value="+" onClick="document.calculator.result.value+='+'" class="operator">
-                </div>
-                <div>
-                    <input type="button" value="4" onClick="document.calculator.result.value+='4'" class="num">
-                    <input type="button" value="5" onClick="document.calculator.result.value+='5'" class="num">
-                    <input type="button" value="6" onClick="document.calculator.result.value+='6'" class="num">
-                    <input type="button" value="-" onClick="document.calculator.result.value+='-'" class="operator">
-                </div>
-                <div>
-                    <input type="button" value="7" onClick="document.calculator.result.value+='7'" class="num">
-                    <input type="button" value="8" onClick="document.calculator.result.value+='8'" class="num">
-                    <input type="button" value="9" onClick="document.calculator.result.value+='9'" class="num">
-                    <input type="button" value="*" onClick="document.calculator.result.value+='*'" class="operator">
-                </div>
-                <div>    
-                    <input type="button" value="/" onClick="document.calculator.result.value+='/'" class="operator">
-                    <input type="button" value="0" onClick="document.calculator.result.value+='0'" class="num">
-                    <input type="reset" value="Reset" class="reset">
-                <!-- same goes for this with the exeption of the value being the returned string of what's in the result text field -->
-                    <input type="button" value="=" onClick="document.calculator.result.value=eval(document.calculator.result.value)" class="equal">
-                </div>
-            </form>
+        <div id="calculator">
+            <div class="screen"></div>
+            <div class="keys">
+                <span>7</span>
+                <span>8</span>
+                <span>9</span>
+                <span class="operator">+</span>
+                <span>4</span>
+                <span>5</span>
+                <span>6</span>
+                <span class="operator">-</span>
+                <span>1</span>
+                <span>2</span>
+                <span>3</span>
+                <span class="operator">÷</span>
+                <span>0</span>
+                <span class="eval">=</span>
+                <span class="operator">x</span>
+                <span class="clear">C</span>
+            </div>
         </div>
         <ul>
             <li>htmlapp: <br>
@@ -43,6 +33,7 @@
                 <a href="http://localhost:3001">localhost:3001</a></li>
             <li>angular:<br>
                 <a href="http://localhost:3002">localhost:3002</a></li>
-        </ul> 
+        </ul>
+        <script src="./js/index.js"></script>
     </body>
     </html>
