fixed the angular calc with a workaround

--- a/angularjscalc/index.html
+++ b/angularjscalc/index.html
@@ -12,6 +12,7 @@
     <div class="wrapper">
     
     <p class="calc-display">
+      <div name="output" id="res" class="output">{{vm.answer}}</div>
       <div name="output" id="res" class="output">{{vm.output}} </div>
     </p>
     <div class="row 1">
